--- a/website/src/pages css/messages.css
+++ b/website/src/pages css/messages.css
@@ -66,3 +66,19 @@
     background-color: #0056b3;
   }
   
+  .feature-buttons {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #fff; 
+    padding: 5px; 
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    margin-bottom: 10px; 
+  }
+
+  .location-send button {
+    margin-bottom: 10px;
+    padding: 5px;
+  }
