--- a/website/src/pages css/messages.css
+++ b/website/src/pages css/messages.css
@@ -27,11 +27,15 @@
     padding: 10px;
   }
   
+  .author {
+    font-size: 13px;
+  }
+
   .message {
-    margin-bottom: 10px;
+    margin-bottom:10px;
     padding: 10px;
-    background-color: #f0f0f0;
-    border-radius: 5px;
+    background-color: #87bff9;
+    border-radius: 10px;
   }
   
   .message-input {
