--- a/website/src/pages css/login.css
+++ b/website/src/pages css/login.css
@@ -40,7 +40,7 @@
     background-color: #0056b3;
   }
 
-  .login-form buttonText {
+  .register-button {
     background:none;
     border:none;
     margin:0;
@@ -50,6 +50,6 @@
     cursor: pointer;
     }
   
-   .login-form buttonText:hover {
+   .register-button:hover {
     color:#0056b3;
     }
