Add API function to get friend invites

--- a/website/src/pages css/messages.css
+++ b/website/src/pages css/messages.css
@@ -62,8 +62,8 @@
   }
 
   .message-container {
-    min-width: 20%;
-    max-width: 70%
+    /* min-width: 10%; */
+    max-width: 60%;
   }
 
   .message-container.other {
