--- a/website/src/pages css/messages.css
+++ b/website/src/pages css/messages.css
@@ -116,7 +116,7 @@
   .location-send button {
     position: fixed;
     right: 0;
-    top: 0;
+    top: 5px;
     padding: 2px;
   }
 
@@ -152,10 +152,6 @@
     gap: 10px; /* Controls spacing between children */
   }
 
-  .location-send button {
-    margin-bottom: 10px;
-    padding: 5px;
-  }
 
 @keyframes slideDown {
   from {
