--- a/website/src/pages css/messages.css
+++ b/website/src/pages css/messages.css
@@ -9,6 +9,7 @@
     overflow-y: auto;
     border-right: 1px solid #ccc;
     max-width: 200px;
+    overflow-x: hidden;
   }
   
   .conversation {
@@ -32,6 +33,16 @@
     background-color: #87bff9;
 }
 
+  .chat-header {
+    height: min(100px, 10%);
+    flex-basis:0;
+    border-bottom: 1px solid #ccc;
+    padding: 0px 10px;
+    
+    display: flex;
+    flex-direction: row;
+  }
+
   .chat-display {
     flex: 1;
     display: flex;
@@ -40,21 +51,34 @@
   }
 
   .message-list-wrapper {
-    flex: 3;
-    overflow:auto;
+    /* flex: 3; */
+    overflow-y: auto;
+    overflow-x: hidden;
     display:flex;
     flex-direction:column-reverse;
   }
+  
   .message-list {
     padding: 10px;
 
-    overflow:auto;
     display:flex;
     flex-direction:column;
-    
-    /* display: flex;
-    flex-direction: column-reverse;
-    overflow: auto; */
+  }
+
+  /* Custom scrollbar */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    border-radius: 30px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: gray;
+    /* outline: 1px solid slategray; */
+    border-radius: 30px;
   }
   
   .author {
