Connecting frontend/backend for Invites

--- a/website/src/pages css/messages.css
+++ b/website/src/pages css/messages.css
@@ -178,6 +178,9 @@
     transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition for interactions */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
     margin-right: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
   }
 
 
