--- a/website/src/pages css/messages.css
+++ b/website/src/pages css/messages.css
@@ -178,17 +178,17 @@
     transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition for interactions */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
     margin-right: 10px;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-left: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
 
   .feature-buttons {
     position: fixed;
-    bottom: 10px;
+    bottom: 5px;
     right: 10px; /* Adjust this to create space on the right */
-    left: 0; /* Adjust if you also want to control spacing from the left */
+    left: 0;
     background-color: #fff; 
     padding: 5px;
     display: flex;
